--- a/HaeChan/Week8/youtube_heachan/style.css
+++ b/HaeChan/Week8/youtube_heachan/style.css
@@ -268,7 +268,6 @@ a, a:active{
     font-family: "Roboto","Arial",sans-serif;
     font-size: 1.4rem;
     line-height: 2rem;
-
     font-weight: 500;
     max-height: 4rem;
     overflow: hidden;
@@ -507,7 +506,6 @@ a, a:active{
 aside{
     position: fixed;
     width: 72px;
-    height: 100%;
     top : 56px;
     left: 0;
     bottom: 0;
@@ -561,7 +559,6 @@ aside{
 .mainContainer{
     margin-left: 72px;
     background-color: #181818;
-    height: 100vh;
     /* flex: 1; */
 }
 
@@ -613,11 +610,11 @@ aside{
 }
 
 .contentBox{
-    height: 100%;
     overflow-y: none;
     margin-top: 112px;
     padding: 24px 16px;
     display: flex;
+    flex: 1;
     flex-wrap: wrap;
 }
 
@@ -625,6 +622,7 @@ aside{
     width: 273px;
     height: 248px;
     padding:0 8px 40px 8px;
+    margin-bottom: 40px;
 }
 
 .vedioDetailContainer{
@@ -656,8 +654,10 @@ aside{
     -webkit-box-orient: vertical;
     text-overflow: ellipsis;
     white-space: normal;
+    margin: 0px 0px 6px 0px;
 }
 
-.vedioMetaData{
+.vedioMetaData p, span{
+    font-size: 1.2rem;
     color: #aaa;
 }
